CL: Updated Mediator Pattern, Added Guava test cases